app/assets/stylesheets/comparison_pages.scss
// Place all the styles related to the ComparisonPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.box {
  border: 1px solid lightgrey;
  margin-bottom: 3em;
}

.box:hover {
  border: 1px solid black;
}

.comparison-candidates-grid {
  margin-top: 1.5em;
  margin-bottom: 2em;
}

.comparison-intro {
  margin-top: -1em;
  margin-bottom: 1.5em;

  p {
    text-align: center;
    font-style: italic;
  }
}

.comparison_nav_menu {
  border: 1px solid black;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  z-index: 1;
  background-color: lightgrey;
}

.election-details-and-flag-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.election-name {
  font-weight: bold;
  font-size: 1.3em;
}

.election-name-small {
  font-size: 1.2em;
}

.election-summary-header {
  margin-bottom: 2em;
}

.participant-name {
  font-weight: bold;
}

.survey-question-text {
  font-size: 1.1em;
  font-style: italic;
}

